<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.gitee.visual0zz</groupId>
    <artifactId>flora-project</artifactId>
    <version>0.1</version>
    <packaging>pom</packaging>

    <modules>
        <module>flora-ramet</module>
        <module>plugins/maven-plugins/flora-ramet-plugin</module>
        <module>flora-osmetes</module>
        <module>plugins/maven-plugins/flora-osmetes-plugin</module>
        <module>flora-root</module>
        <module>flora-shell</module>
        <module>flora-garden</module>
        <module>flora-internal-evaluation</module>
        <module>flora-tangle</module>
        <module>flora-tangle/testbed</module>
        <module>cultivating/flora-hanako</module>
    </modules>

    <properties>
        <revision>0.1</revision>
        <jmh.version>1.37</jmh.version>
        <surefire.version>3.5.2</surefire.version>
        <maven.compiler.plugin.version>3.14.0</maven.compiler.plugin.version>
        <maven.compiler.source>26</maven.compiler.source>
        <maven.compiler.target>26</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- 默认排除 slow 测试标签（如实现真机集成测试），可通过测试脚本的
             -Dsurefire.excludedGroups= 参数设置为空来关闭该排除 -->
        <surefire.excludedGroups>slow</surefire.excludedGroups>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- JUnit 5 单元测试：所有子模块统一继承 -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.11.4</version>
                <scope>test</scope>
            </dependency>
            <!-- JUnit Platform Launcher：IDEA 运行测试所需 -->
            <dependency>
                <groupId>org.junit.platform</groupId>
                <artifactId>junit-platform-launcher</artifactId>
                <version>1.11.4</version>
                <scope>test</scope>
            </dependency>
            <!-- plexus-utils: 修复 CVE-2025-67030（目录遍历，CVSS 8.8�?
                 maven-plugin-api:3.9.11 传递依�? 3.6.0，需覆盖�? 3.6.1 -->
            <dependency>
                <groupId>org.codehaus.plexus</groupId>
                <artifactId>plexus-utils</artifactId>
                <version>3.6.1</version>
            </dependency>
            <!-- 编译�? Nullability 注解 -->
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>26.0.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- JUnit 5 单元测试：所有子模块统一继承 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- JUnit Platform Launcher：IDEA 运行测试所需 -->
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Nullability 注解：适用于所�? Java 源码 -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- 单元测试运行器：必须显式指定支持 JUnit5 / Java 26 的版本，
                 否则默认 surefire 不识�? jupiter 用例（测试结果恒�? 0）�? -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <!-- �ų� slow ����ԣ���ʵ����/ɳ����ԣ����� properties.surefire.excludedGroups -->
                    <excludedGroups>${surefire.excludedGroups}</excludedGroups>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.15</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
